perses-results/1/jdk-bugs-replace/iter_8/PersesTempRoot_Main.java_run2.sh_20250814_135328_00/000000/compile_err.txt
./Main.java:2177: error: type argument Function1<? extends Byte,? extends Byte> is not within bounds of type-variable A
<
^
  where A,W are type-variables:
    A extends Function1<W,? extends W> declared in class Quested
    W extends Object declared in class Quested
error: type argument Function1<? extends Byte,? extends Byte> is not within bounds of type-variable A
  where A,W are type-variables:
    A extends Function1<W,? extends W> declared in class Quested
    W extends Object declared in class Quested
2 errors
